--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.19.2",
     "node-fetch": "^3.3.2",
     "socket.io": "^4.7.5",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
