--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.8",
+    "@types/uuid": "^10.0.0",
     "tsup": "^8.1.0",
     "tsx": "^4.15.7",
     "typescript": "^5.5.2"
